<resources>
    <string name="price_format">₹%,.2f</string>
    <string name="app_name">Eggoz</string>
    <string name="splash">Splash</string>
    <string name="start_heading">Protein for your teen in every bite</string>
    <string name="start_des">Eggoz brings India’s first UV sanitised eggs fresh from farm to your nearest retailer</string>
    <string name="Get_Started">Get Started</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="_91">91</string>
    <string name="Request_OTP">Request OTP</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="otp">Otp</string>
    <string name="Verify">Verify</string>
    <string name="MySubscription">My Subscription</string>
    <string name="Subscription">Subscription</string>
    <string name="SeeAll">See All</string>
    <string name="PopularProducts">Popular Products</string>
    <string name="DoMorewithEggoz">Do More with Eggoz</string>
    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="SelectyourCity">Select your Zone</string>
    <string name="SelectyourLocality">Select your Locality</string>
    <string name="next">Next</string>
    <string name="AllProducts">All Products</string>
    <string name="SortFilter">     Sort/Filter</string>
    <string name="BUYONCE">BUY ONCE</string>
    <string name="MYWALLET">MY WALLET</string>
    <string name="Poweredby">Powered by Axis Bank</string>
    <string name="TotalBalance">Total Balance</string>
    <string name="Rs0">Rs 0.0</string>
    <string name="PromotionalBalanceexpires">*Promotional Balance expires in 30 days.</string>
    <string name="ADDMONEY">ADD MONEY</string>
    <string name="Getdis100"><![CDATA[Get ₹100 extra on adding ₹500 & above]]></string>
    <string name="getdis500"><![CDATA[Get ₹500 extra on adding ₹2000 & above]]></string>
    <string name="History">History</string>
    <string name="PaidforEggoz">Paid for Eggoz Premium 6 pcs</string>
    <string name="EggozOrder">Eggoz Order #001</string>
    <string name="dummydate">5th June, 06:30 AM</string>
    <string name="Extrachargesmayapply">Extra charges may apply</string>
    <string name="VIEWCART">VIEW CART  </string>
    <string name="BUYNOW">BUY NOW</string>
    <string name="menu_itemdetail">Item Detail</string>
    <string name="benefits">Benefits</string>
    <string name="specification">Specification</string>
    <string name="review">Reviews</string>
    <string name="nutritionalinformation">Nutritional Information</string>
    <string name="peoplealsobought">People also bought</string>
    <string name="Price">₹ 0.00</string>
    <string name="buy_now">Buy Now</string>
    <string name="review_cart">Review Cart</string>
    <string name="_00">00</string>
    <string name="menu_cart">Cart</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="ProceedtoPay">Proceed to Pay</string>
    <string name="default1">(Default)</string>
    <string name="menu_address">Address</string>
    <string name="PromotionalBalance">Promotional Balance*</string>
    <string name="inclofalltaxes">incl of all taxes</string>
    <string name="Checkout">Place Order</string>
    <string name="my_account">My Account</string>
    <string name="edit">EDIT</string>
    <string name="manage_addresses">Manage addresses</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="faqs">FAQs</string>
    <string name="legal_terms_conditions"><![CDATA[Legal, Terms & Conditions]]></string>
    <string name="past_orders">PAST ORDERS</string>
    <string name="view_all">VIEW ALL</string>
    <string name="manage_addersses">Manage Addersses</string>
    <string name="saved_addresses">SAVED ADDRESSES</string>
    <string name="delete">DELETE</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_name">Address Name</string>
    <string name="hintaddress_name">Enter Address Name</string>
    <string name="building_address">Building Address</string>
    <string name="hintbuilding_address">Enter Building Address</string>
    <string name="street_address">Street Address</string>
    <string name="hintstreet_address">Enter Street Address</string>
    <string name="landmark">Landmark</string>
    <string name="state">State</string>
    <string name="select_state">Select State</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="hintpincode">Enter Pincode</string>
    <string name="save">Save</string>
    <string name="phone_no">Phone No</string>
    <string name="hintphone_no">Enter Phone No</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="pincode">Pincode</string>
    <string name="def_price">0.0f</string>
    <string name="price_format_currentballance">₹ %1$.2f</string>
    <string name="reload">Refresh</string>
    <string name="ChoosePlan">Choose Plan</string>
    <string name="menu_membership">Membership</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="na">Na</string>
    <string name="plan">Plan</string>
    <string name="frequency_of_delivery">Frequency of Delivery</string>
    <string name="total_deliveries">Total Deliveries</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_savings">Total Savings</string>
    <string name="offer_price">Offer Price</string>
    <string name="total_order_amount">Total Order Amount:</string>
    <string name="Subscriptionplan">Subscription Plans</string>
    <string name="choose_your_subscription_plan">Choose your Subscription plan</string>
    <string name="SubscribeNow">Subscribe Now</string>
    <string name="addmoney">Add Money</string>
    <string name="subcribe_now">Subcribe Now</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="Logout">Logout</string>
    <string name="FAQs">FAQs</string>
    <string name="helpsupport"><![CDATA[Help & Support]]></string>
    <string name="customerservice">Customer Service</string>
    <string name="nav_header_title">title</string>
    <string name="your_order">Your Orders</string>
    <string name="Refer_Earn"><![CDATA[Refer & Earn]]></string>
    <string name="MyAccount">My Account</string>
    <string name="ContactUs">Contact Us</string>
    <string name="together_we_re_going_further">Together,we’re going further!</string>
    <string name="spreadtheeggoz">#spreadtheeggoz</string>
    <string name="refer_introduce_the_eggoz_to_your_contacts"><![CDATA[Refer & introduce the eggoz to your contacts]]></string>
    <string name="refer_now">REFER NOW!</string>
    <string name="i_refer_now">I Refer Now!</string>
    <string name="url">url</string>
    <string name="share_your_link">Share Your Link</string>
    <string name="invitation_send">Invitation Send</string>
    <string name="thank_you">Thank you !</string>
    <string name="your_friend_receives_the_invitation_soon">Your friend receives the invitation soon</string>
    <string name="open_map">Open Map</string>
    <string name="dial">Dial</string>
    <string name="myorders">My Orders</string>
    <string name="blog">Blogs</string>
    <string name="no_order_for_the_day">No order for the day</string>
    <string name="add_products">Add Products</string>
    <string name="explain_issue">Explain Issue</string>
    <string name="some_error_occurred">Error Occurred</string>
    <string name="order_id">Order Id:</string>
    <string name="quantity">Quantity:</string>
    <string name="address">Address:</string>
    <string name="delivery_time">Delivery Time:</string>
    <string name="add_query">Add Query</string>
    <string name="change_region">Change Region</string>
    <string name="pay_now">Pay Now</string>
    <string name="card_upi_banking">Card/Upi/Banking</string>
    <string name="referal_code">Referal Code</string>
    <string name="hint_referal_code">Enter Referal Code</string>
    <string name="hint_add_message">Add Message</string>
    <string name="search_help">Search Help</string>
    <string name="send_a_message">Send a Message</string>
    <string name="first_name">First Name</string>
    <string name="hint_enter_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_phone">Enter Phone No.</string>
    <string name="hint_message">Enter Message</string>
    <string name="last_name">Last Name</string>
    <string name="message">Message</string>
    <string name="estimated_delivery">Estimated delivery</string>
</resources>