<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.faq.view.FaqFragment">



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/s150"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s40"
            android:fontFamily="@font/spartanmedium"
            android:text="@string/first_name"
            android:layout_marginTop="@dimen/s42"
            android:textColor="@color/black"
            android:textSize="@dimen/s12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_first_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/s40"
            android:paddingRight="@dimen/s40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s40"
            android:fontFamily="@font/spartanmedium"
            android:text="@string/last_name"
            android:layout_marginTop="@dimen/s12"
            android:textColor="@color/black"
            android:textSize="@dimen/s12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_first_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_last_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/s40"
            android:paddingRight="@dimen/s40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txt_phoneNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s40"
            android:fontFamily="@font/spartanmedium"
            android:text="@string/phone_no"
            android:layout_marginTop="@dimen/s12"
            android:textColor="@color/black"
            android:textSize="@dimen/s12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_last_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/s40"
            android:paddingRight="@dimen/s40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phoneNo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s40"
            android:fontFamily="@font/spartanmedium"
            android:text="@string/email"
            android:layout_marginTop="@dimen/s12"
            android:textColor="@color/black"
            android:textSize="@dimen/s12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_phone_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/s40"
            android:paddingRight="@dimen/s40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s40"
            android:fontFamily="@font/spartanmedium"
            android:text="@string/message"
            android:layout_marginTop="@dimen/s12"
            android:textColor="@color/black"
            android:textSize="@dimen/s12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_message_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/s40"
            android:paddingRight="@dimen/s40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_message"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
















        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s40"
            android:layout_marginEnd="@dimen/s40"
            android:layout_marginTop="@dimen/s40"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:background="@drawable/buttonbackrad8"
            app:cardElevation="@dimen/s0"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="@dimen/s60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_message_layout"
            android:focusable="true">
            <TextView
                android:id="@+id/txt_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="16dp"
                style="@style/textLarge"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save" />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>